# docker-django-postgres

./: .dockerignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/core/: settings.py  urls.py
dotenv_files/: .env-example
scripts/: commands.sh
