[tool.poetry]
name = "docker-django-postgres"
version = "0.1.0"
description = ""
authors = ["Mauricio Benjamin <mauriciobenjamin700@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
